@@ -1,7 +1,3 @@
 # spring-demo
 
-```bash
---add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
-```
-
 `Add dependencies with "provided" scope to classpath`
